--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     setBg(); setInterval(setBg, 60000);
 
     // ===== LÄGG TILL SAMBONS KALENDER =====
-    const PARTNER_ID = ""; // ex: "maya.yeranossian@gmail.com"
+    const PARTNER_ID = "maya.yeranossian@gmail.com"; // ex: "maya.yeranossian@gmail.com"
     function updateIframeSrc() {
       const base = "https://calendar.google.com/calendar/embed?mode=MONTH&ctz=Europe/Stockholm";
       const mine = "src=arshia.ksabet%40gmail.com";
